--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 
         </section>
-            <img src="imagen/Imagem.png" alt="Foto de Ana García desarrolando un proyecto">
+        <img src="imagen/Imagem.png" alt="Foto de Ana García desarrollando un proyecto" class="imagen-proyecto">
     </main>
     <footer></footer>
 </body>
