--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <img src="imagen/Imagem.png" alt="Foto de Ana García desarrollando un proyecto" class="imagen-proyecto">
     </main>
     <footer></footer>
+    <script src="script.js"></script>
+
 </body>
 </html>
 
